# alma-item-checks-update-service

./: .gitignore  .pre-commit-config.yaml  function_app.py  pyproject.toml
.github/workflows/: build-deploy.yml  dependabot-import-test.yml  poetry-update.yml  promote-to-production.yml
alma_item_checks_update_service/: config.py
alma_item_checks_update_service/blueprints/: bp_update.py
alma_item_checks_update_service/services/: update_service.py
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
tests/blueprints/: test_bp_update.py
tests/services/: test_update_service.py
